--- a/test.html
+++ b/test.html
@@ -12,7 +12,8 @@
         <div class="timer" id="timer">Timer: 0</div>
         <div class="player" id="player"></div>
     </div>
-
+    <script src="sounds.js"></script>
+    <script src="gun.js"></script>
     <script src="game.js"></script>
   </body>
 </html>
