--- a/html/game.html
+++ b/html/game.html
@@ -4,25 +4,23 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Space Invaders</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="icon" type="image/x-icon" href="./images/chicken.png">
-
+    <link rel="stylesheet" href="../css/style.css">
+    <link rel="icon" type="image/x-icon" href="../images/chicken.png">
   </head>
   <body>
     <div class="info">
       <div class="score" id="score">Score: 0</div>    
-      <div id="hp"><img id="changeHp" src="./images//fullhp.png" alt="" srcset=""></div>
+      <div id="hp"><img id="changeHp" src="../images/fullhp.png" alt="" srcset=""></div>
       <div id="timer"></div>
-    <div id="fps">FPS: 0</div>
-  </div>
-  <br>
-  <div id="game">
+      <div id="fps">FPS: 0</div>
+    </div>
+    <br>
+    <div id="game">
       <div class="background"></div>
       <div class="player" id="player"></div>
       <div id="pauseMessage" class="hidden">
         <div id="menu">
           <a><h2 class="menu-item">Continue</h2></a>
-         
           <a href="game.html"><h2 class="menu-item">Restart</h2></a>
           <a href="index.html"><h2 class="menu-item">Main Menu</h2></a>
         </div>
@@ -31,16 +29,16 @@
         <h1>Game Over</h1>
         <p id="finalScore"></p>
         <p id="finalTime"></p>
-        <button id="restartButton">Restart</button>
+        <button id="restartButton" class="gameover-btn">Restart</button>
+        <button id="endButton" class="gameover-btn">End</button>
       </div>
     </div>
-    </div>
-    <script src="sounds.js"></script>
-    <script src="chicken.js"></script>
-    <script src="gun.js"></script>
-    <script src="utils.js"></script>
-    <script src="leaderboard.js"></script>
-    <script src="game.js"></script>
+    <script src="../js/sounds.js"></script>
+    <script src="../js/chicken.js"></script>
+    <script src="../js/gun.js"></script>
+    <script src="../js/utils.js"></script>
+    <script src="../js/leaderboard.js"></script>
+    <script src="../js/game.js"></script>
   </body>
   <script>
     const menuItems = document.querySelectorAll(".menu-item");
@@ -54,6 +52,7 @@
     }
 
     document.addEventListener("keydown", (event) => {
+      if (typeof gameOver !== "undefined" && gameOver) return;
       if (event.key === "ArrowDown") {
         currentIndex = (currentIndex + 1) % menuItems.length;
         updateHighlight();
