--- a/html/settings.html
+++ b/html/settings.html
@@ -4,21 +4,16 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Space Invaders</title>
-    <link rel="stylesheet" href="index.css" />
-    <link rel="icon" type="image/x-icon" href="./images/chicken.png">
-    <script src="sounds.js"></script>
+    <link rel="stylesheet" href="../css/index.css" />
+    <link rel="icon" type="image/x-icon" href="../images/chicken.png">
+    <script src="../js/sounds.js"></script>
   </head>
   <body>
     <div id="menu">
-        <h1>Enter your name</h1>
-        <input type="text" id="name" placeholder="Your name" />
-        <a href="game.html" id="start-game"><h2 class="menu-item">Start Game</h2></a>
-      </div>
-      
-
-    <script src="game.js"></script>
-
-    <!-- <script>
+      <a><h2 class="menu-item">Speed</h2></a>
+      <a><h2 class="menu-item">Difficulty</h2></a>
+    </div>
+    <script>
       const menuItems = document.querySelectorAll(".menu-item");
       let currentIndex = 0;
 
@@ -33,14 +28,16 @@
         if (event.key === "ArrowDown") {
           currentIndex = (currentIndex + 1) % menuItems.length;
           updateHighlight();
+
         } else if (event.key === "ArrowUp") {
           currentIndex =
             (currentIndex - 1 + menuItems.length) % menuItems.length;
           updateHighlight();
+
         } else if (event.key === "Enter" || event.key === " ") {
           menuItems[currentIndex].click();
         } else if (event.key === "Escape") {
-          history.back();
+            history.back()
         }
       });
       menuItems.forEach((item, index) => {
@@ -50,6 +47,6 @@
         });
       });
       updateHighlight();
-    </script> -->
+    </script>
   </body>
 </html>
